# pertmux

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: docs.yml  rust.yml
docs/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
docs/src/components/: FeatureGrid.astro  Footer.astro  GettingStarted.astro  Hero.astro  LinkingDiagram.astro  Navbar.astro  WhyIBuiltIt.astro
docs/src/content/docs/configuration/: agent-config.md  config-reference.md  forge-setup.md  github-setup.md  gitlab-setup.md  multi-project.md
docs/src/content/docs/features/: agent-actions.md  agent-monitoring.md  mr-tracking.md  pipeline-visualization.md  worktree-management.md
docs/src/content/docs/getting-started/: installation.md  quick-start.md  tmux-integration.md
docs/src/content/docs/reference/: architecture.md  cli-commands.md  contributing.md  extending.md  keybindings.md  security.md
docs/src/pages/: index.astro
docs/src/styles/: custom.css
src/: agent_changes.rs  api.rs  app.rs  banner.rs  client.rs  codex_hooks.rs  config.rs  daemon.rs  db.rs  discovery.rs  git.rs  linking.rs  main.rs  mr_changes.rs  project_sort.rs  project_stats.rs  protocol.rs  read_state.rs  tmux.rs  types.rs  ui.rs  worktrunk.rs
src/coding_agent/: claude_code.rs  codex.rs  mod.rs  opencode.rs
src/config/: agent.rs  forge.rs  keybindings.rs  mod.rs
src/forge_clients/: mod.rs  traits.rs  types.rs
src/forge_clients/github/: client.rs  mod.rs  types.rs
src/forge_clients/gitlab/: client.rs  mod.rs  types.rs
src/gitlab/: client.rs  mod.rs  types.rs
src/ui/: helpers.rs  mod.rs
src/ui/components/: activity_feed.rs  cards.rs  change_summary.rs  detail_panel.rs  list_panel.rs  loading.rs  mod.rs  mr_sections.rs  notification.rs  overview.rs  pipeline.rs  popup.rs
