[package]
name = "pertmux"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
ureq = { version = "3", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
sysinfo = "0.33"
netstat2 = "0.11"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
nucleo-matcher = "0.3"
async-trait = "0.1"
