[package]
name = "pertmux"
version = "0.4.0"
edition = "2024"
description = "A TUI dashboard that links GitLab/GitHub MRs to local branches, tmux sessions, and AI coding agents"
license = "MIT"
repository = "https://github.com/rupert648/pertmux"
homepage = "https://pertmux.dev"
readme = "README.md"
keywords = ["tui", "tmux", "git", "dashboard", "worktree"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
futures = "0.3"
ureq = { version = "3", features = ["json"] }
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "6"
sysinfo = "0.39"
netstat2 = "0.11"
toml = "1"
clap = { version = "4", features = ["derive"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
nucleo-matcher = "0.3"
async-trait = "0.1"
jiff = { version = "0.2", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }
